<?xml version="1.0"?>
<package format="2">
  <name>generate_lane</name>
  <version>0.0.0</version>
  <description>A simple package to detect lane online</description>
  <maintainer email="linh@todo.todo">linh</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
